net/spdy/chromium/spdy_session.cc
@@ -1592,7 +1592,7 @@ void SpdySession::TryCreatePushStream(SpdyStreamId stream_id,
   GURL gurl = GetUrlFromHeaderBlock(headers);
   if (!gurl.is_valid()) {
     EnqueueResetStreamFrame(
-        stream_id, request_priority, ERROR_CODE_PROTOCOL_ERROR,
+        stream_id, request_priority, ERROR_CODE_REFUSED_STREAM,
         "Pushed stream url was invalid: " + gurl.possibly_invalid_spec());
     return;
   }
@@ -1661,7 +1661,7 @@ void SpdySession::TryCreatePushStream(SpdyStreamId stream_id,
   if (pushed_it != unclaimed_pushed_streams_.end() &&
       pushed_it->first == gurl) {
     EnqueueResetStreamFrame(
-        stream_id, request_priority, ERROR_CODE_PROTOCOL_ERROR,
+        stream_id, request_priority, ERROR_CODE_REFUSED_STREAM,
         "Received duplicate pushed stream with url: " + gurl.spec());
     return;
   }
